--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container .navbar {
-  height: 10vh;
+  height: 70px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -116,6 +116,7 @@
 }
 
 .container .section {
+  height: calc(100% - 70px);
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
