--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@
 
 .container {
   .navbar {
-  height: 10vh;
+  height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -84,7 +84,7 @@
   }
 
   .section {
-    // height: 90vh;
+    height: calc(100% - 70px);
     width: 100%;
     display: flex;
     align-items: center;
